--- a/4/tpl/header.tpl.html
+++ b/4/tpl/header.tpl.html
@@ -41,7 +41,7 @@
 				<div class="collapse navbar-collapse">
 					<ul id="navigation" class="nav navbar-nav navbar-right text-center">
 						<li><a href="index.php">NOSOTROS</a></li>
-						<li><a href="#">PRODUCTOS</a></li>
+						<li><a href="productos.php">PRODUCTOS</a></li>
 						<li><a href="#">CLIENTES</a></li>
 						<li><a href="#">SHOWROOM</a></li>
 						<li><a href="contacto.php">CONTACTO</a></li>
