Pagina 4 mejorado y brandeado con los colores

--- a/4/tpl/header.tpl.html
+++ b/4/tpl/header.tpl.html
@@ -1,9 +1,7 @@
-<!doctype html>
-<html ng-app="storeApp">
-
-<!-- Mirrored from demo.angelostudio.net/microstore/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 11 Feb 2016 04:50:58 GMT -->
+<!DOCTYPE html>
+<html>
 <head>
-		<title>MicroStore - Responsive One Page shop</title>
+		<title>VISSO: Venta de escritorios operativos de oficina / PORTICO</title>
 		<meta charset="utf-8">
 		<meta name="description" content="MicroStore Responsive HTML5/CSS3 Template from angelostudio.net">
 		<meta name="author" content="ANGELOSTUDIO.NET">
@@ -14,7 +12,7 @@
 		<link rel="stylesheet" href="css/icons.css">
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/switcher.css">
-		<link rel="stylesheet" href="css/green.css" class="colors">
+		<!-- <link rel="stylesheet" href="css/green.css" class="colors"> -->
 		<link rel="shortcut icon" href="img/ico/32.png" sizes="32x32" type="image/png"/>
 		<link rel="apple-touch-icon-precomposed" href="img/ico/60.png" type="image/png"/>
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/72.png" type="image/png"/>
@@ -33,7 +31,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#home">
+					<a class="navbar-brand" href="index.php">
 						<img id="navlogo" src="img/VISSO_black.jpg" alt="microstore" height="45">
 					</a>
 
