--- a/4/tpl/footer.tpl.html
+++ b/4/tpl/footer.tpl.html
@@ -1,14 +1,16 @@
 		<footer id="main-footer" class="dark-bg light-typo">
 			<div class="container">
-				<p class="pull-left copyright wow fadeInUp">&copy; VISSO 2014.</p>
+				<p class="pull-left copyright wow fadeInUp">&copy; Copyright VISSO <?php echo date('y') ?></p>
+				<p class="pull-right wow fadeInDown">Av. Pardo y Aliaga 498 . San Isidro - Central 717 4796</p>
 			</div>
 		</footer>
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<!-- <script type="text/javascript" src="js/jquery.singlePageNav.min.js"></script> -->
 		<script type="text/javascript" src="js/jquery.superslides.min.js"></script>
 		<script type="text/javascript" src="js/jquery.countdown.min.js"></script>
+		<script src="js/mimity.js"></script>
 		<script type="text/javascript" src="js/wow.min.js"></script>
 		<script type="text/javascript" src="js/custom3860.js?v=1"></script>
 		<!-- <script type="text/javascript" src="js/app.js"></script> -->
@@ -24,6 +26,4 @@
 			// })();
 		</script>
 	</body>
-
-<!-- Mirrored from demo.angelostudio.net/microstore/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 11 Feb 2016 04:52:01 GMT -->
 </html>
