--- a/1/tpl/footer.tpl.html
+++ b/1/tpl/footer.tpl.html
@@ -23,7 +23,7 @@
 					<div class="col-md-6 co-xs-12 social-media-block">
 						<div class="row">
 							<div class="col-md-5 col-xs-12">
-								<h4 class="text-right">Follow Us</h4>
+								<h4 class="text-right">Siguenos</h4>
 							</div>
 							<div class="col-md-7 col-xs-12">
 								<ul class="list-unstyled list-inline sm-links">
@@ -35,12 +35,6 @@
 									</li>
 									<li>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</li>
-									<li>
-										<a href="#"><i class="fa fa-skype"></i></a>
-									</li>
-									<li>
-										<a href="#"><i class="fa fa-pinterest"></i></a>
 									</li>
 								</ul>
 							</div>
@@ -55,7 +49,7 @@
 			<!-- Nested Container Starts -->
 			<div class="container">
 			<!-- Footer Boxes Starts -->
-				<div class="row footer-boxes text-center">
+				<!-- <div class="row footer-boxes text-center">
 					<div class="col-sm-4 col-xs-12">
 						<h2 class="text-uppercase">Spring Sales</h2>
 						<h4>Get Upto 20% Off</h4>
@@ -71,20 +65,20 @@
 						<h4>( +001-123-456-7890 )</h4>
 						<p>Magnam accusantium iure, officiis praesentium quaerat voluptatum laudantium ipsam tempora.</p>
 					</div>
-				</div>
+				</div> -->
 			<!-- Footer Boxes Ends -->
 			<!-- Footer Brand Logo Starts -->
 				<div class="row foot-brand-logo">
 					<div class="col-sm-6 col-xs-12 col-sm-offset-3">
 						<ul class="list-unstyled text-center">
 							<li class="brand">
-								Mini-<span class="mid">e</span> <span class="last">Stores</span>
+								<span>VISSO</span>
 							</li>
 							<li>
-								Address : Est in 1980. LIG 436, Green Hills colony, Kothapet. Hyd - 500001.
+								Address : Av. Pardo y Aliaga 498 . San Isidro
 							</li>
 							<li>
-								Email : <a href="mailto:support@domain.com">support@domain.com</a>, Telephone No: 001-800-9632
+								Email : <a href="mailto:support@domain.com">support@visso.com.pe</a>, Central 717 4796
 							</li>
 						</ul>
 					</div>
@@ -93,7 +87,7 @@
 			<!-- Copyright Starts -->
 				<div class="copyright clearfix">
 					<div class="pull-left">
-						Copyright 2015 &copy; Mini-e-Stores.
+						Copyright &copy; <?php echo date('y')?> Visso
 					</div>
 				</div>
 			<!-- Copyright Ends -->
