Agreagdo detalle de producto

--- a/1/tpl/footer.tpl.html
+++ b/1/tpl/footer.tpl.html
@@ -87,7 +87,7 @@
 			<!-- Copyright Starts -->
 				<div class="copyright clearfix">
 					<div class="pull-left">
-						Copyright &copy; <?php echo date('y')?> Visso
+						Copyright &copy; <?php echo date('Y')?> Visso
 					</div>
 				</div>
 			<!-- Copyright Ends -->
