--- a/1/tpl/header.tpl.html
+++ b/1/tpl/header.tpl.html
@@ -66,7 +66,7 @@
 									<span class="icon-bar"></span>
 								</button>
 								<a href="index.php" class="navbar-brand">
-									<img src="images/logo.png">
+									<img src="images/logo_p.png">
 								</a>
 							</div>
 						<!-- Navbar Header Ends -->
