Removido los precios del listado de productos

--- a/4/tpl/header.tpl.html
+++ b/4/tpl/header.tpl.html
@@ -42,9 +42,8 @@
 						<li><a href="productos.php">PRODUCTOS</a></li>
 						<li><a href="#">CLIENTES</a></li>
 						<li><a href="#">SHOWROOM</a></li>
-						<li><a href="contacto.php">CONTACTO</a></li>
+						<li><a href="#">CONTACTO</a></li>
 					</ul>
 				</div>
-
 			</div>
 		</div>
