Mejorado el diseño por el que me pasaron

--- a/1/tpl/header.tpl.html
+++ b/1/tpl/header.tpl.html
@@ -9,7 +9,6 @@
 		<meta name="author" content="">
 
 		<title>Venta de muebles de oficina / VISSO</title>
-
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -66,8 +65,28 @@
 									<span class="icon-bar"></span>
 								</button>
 								<a href="index.php" class="navbar-brand">
-									<img src="images/logo_p.png">
+									<img src="images/logo_p2.png">
 								</a>
+								<div class="links-socials pull-left">
+									<a href="#">
+										<span class="fa-stack fa-lg">
+											<i class="fa fa-circle-thin fa-stack-2x"></i>
+											<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+										</span>
+									</a>
+									<a href="#">
+										<span class="fa-stack fa-lg">
+											<i class="fa fa-circle-thin fa-stack-2x"></i>
+											<i class="fa fa-youtube-play fa-stack-1x fa-inverse"></i>
+										</span>
+									</a>
+									<a href="#">
+										<span class="fa-stack fa-lg">
+											<i class="fa fa-circle-thin fa-stack-2x"></i>
+											<i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
+										</span>
+									</a>
+								</div>
 							</div>
 						<!-- Navbar Header Ends -->
 						<!-- Navbar Collapse Starts -->
